hw_05_prometheus_grafana/kubernetes/templates/k_app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k-app-deployment
spec:
  replicas: 1
  minReadySeconds: 25
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      env: prod
  template:
    metadata:
      labels:
        env: prod
    spec:
      containers:
        - name: k-app-container
          image: slow3586/micro_0224_skv:hw_05
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8000
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8000
