hw_05_prometheus_grafana/kubernetes/templates/k_app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k-app-service
  labels:
    env: prod
spec:
  type: NodePort
  selector:
    env: prod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: web
